--- a/src/table/menu/menu.css
+++ b/src/table/menu/menu.css
@@ -1,5 +1,7 @@
 .side-menu {
   position: fixed;
+  top: 0;
+  left: 0;
   height: 100dvh;
   width: 60px;
   background: #222;
